Style fix (deploy needed for testing on mobile)

--- a/frontend/src/components/SelectProduct/SelectProduct.sass
+++ b/frontend/src/components/SelectProduct/SelectProduct.sass
@@ -14,21 +14,21 @@
   height: 300px
   .buttonContainer
     .viewport
-      /*  video, canvas
-            width: -webkit-fill-available
-            width: -moz-available
-            width: fill-available
-            height: -webkit-fill-available
-            height: -moz-available
-            height: fill-available
-            max-width: 450px */
+      video, canvas
+        width: -webkit-fill-available
+        width: -moz-available
+        width: fill-available
+        height: -webkit-fill-available
+        height: -moz-available
+        height: fill-available
+        max-width: 450px
     #btnBack
       position: absolute
       bottom: 0
       left: 0
 @media screen and ( min-width: 760px )
   .scanning
-    height: 400px
+    height: 425px
     .viewport
     #btnBack
       left: 15px !important
